--- a/.github/ISSUE_TEMPLATE/bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yml
@@ -21,18 +21,28 @@ body:
       label: 개발 OS
       description: 개발하는 OS 버전을 입력해 주세요.
       placeholder: Windows 10 Pro x64, Arch Linux, etc...
+      required: true
   - type: input
     id: jdk
     attributes:
       label: 개발 JDK
       description: 개발하는 JDK 버전을 입력해 주세요.
       placeholder: JDK 버전은 java -version 을 명령 프롬포트(또는 터미널)에 입력하는 것으로 확인 가능합니다.
+      required: true
+  - type: input
+    id: kotlin
+    attributes:
+      label: 개발 Kotlin 버전
+      description: 개발하는 Kotlin 버전을 입력해 주세요.
+      placeholder: Kotlin 1.6.10, Kotlin 1.5, etc...
+      required: true
   - type: input
     id: mcver
     attributes:
       label: 개발 마인크래프트 버전
       description: 버그에 사용된 마인크래프트 버전을 입력해 주세요.
       placeholder: 1.17.1, 1.17, etc...
+      required: true
   - type: textarea
     id: what-happened
     attributes:
@@ -42,18 +52,21 @@ body:
         
         스크린샷은 이곳에 추가해 주세요. 이곳에 끌어넣으면 스크린샷을 추가할 수 있습니다.
       placeholder: 자세히 적어주세요. 안된다고만 하는 것은 도움이 되지 않습니다.
+      required: true
   - type: textarea
     id: expected
     attributes:
       label: 어떻게 작동해야 하나요?
       description: 예상된 움직임을 적어주세요.
       placeholder: 명확하고 간결하게 적어주세요.
+      required: true
   - type: textarea
     id: reproduce
     attributes:
       label: 재현하기 위한 과정이 무엇인가요?
       description: 재현하기 위한 과정을 적어주세요.
       placeholder: 1. 2. 3. 과 같이 적어주세요.
+      required: true
   - type: textarea
     id: sourcecode
     attributes:
